More work done on readme.