@@ -1,19 +1,19 @@
-### Intro
+## Intro
 
 This is a Zend extension to add recursive tail call optimisation to PHP. Developed and tested with PHP 8, but should compile & work with other versions.
 
 Disclaimer: I can't guarantee the completeness or stability of this extension - so if you choose to use it in the wild, exercise discretion.
 
-### Table of contents
+## Table of contents
 * [Example](#example)
 * [Installation](#install)
 * [Configuration](#config)
 * [Under the hood](#internals)
-* [Caveats]
+* [Caveats](#caveats)
 * [License](#license)
 
 <a name="example"></a>
-### Example
+## Example
 
 In this example, we'll use the following PHP code:
 
@@ -48,7 +48,7 @@ If we dump the opcodes with the module disabled, we get something like this:
 0009 RETURN null
 ```
 
-Between ```0003``` and ```0007``` we can see the opcodes for the recursive tail call. The result of ```$n + 1``` is returned in ```T2``` and then passed as an argument for the recursive call to ```test```. The value returned by ```test``` is then stored in ```V3``` and returned on line ```0007```.
+Between `0003` and `0007` we can see the opcodes for the recursive tail call. The result of `$n + 1` is returned in `T2` and then passed as an argument for the recursive call to `test`. The value returned by `test` is then stored in `V3` and returned on line `0007`.
 
 With the module enabled, these opcodes are rewritten to something closer to this:
 
@@ -65,9 +65,9 @@ With the module enabled, these opcodes are rewritten to something closer to this
 0009 RETURN null
 ```
 
-Here, all function call opcodes are removed/rewritten. Instead of ```T2``` being pushed as an argument, it's assigned directly to ```$n``` - and instead of ```test``` being called again, there's a ```JMP``` to ```0001``` - back to the beginning of the function.
+Here, all function call opcodes are removed/rewritten. Instead of `T2` being pushed as an argument, it's assigned directly to `$n` - and instead of `test` being called again, there's a `JMP` to `0001` - back to the beginning of the function.
 
-(The ```NOP``` on ```0006``` and ```0007``` are just overwritten leftover opcodes; they could/should get optimised out in a later pass by something like OPcache.)
+(The `NOP` on `0006` and `0007` are just overwritten leftover opcodes; they could/should get optimised out in a later pass by something like OPcache.)
 
 Here is a slightly more complex example:
 
@@ -90,7 +90,7 @@ class Test
 }
 ```
 
-With the module enabled, the resulting opcodes for the ```test``` method (after optimisation) are as such:
+With the module enabled, the resulting opcodes for the `test` method (after optimisation) are as such:
 
 ```
 0000 CV0($x) = RECV_INIT 1 int(10)
@@ -114,27 +114,69 @@ With the module enabled, the resulting opcodes for the ```test``` method (after 
 This example demonstrates a number of things:
 
 1. The module works with named arguments.
-2. At ```0006``` we can see that ```$x``` is reset to its default value of ```10```.
-3. Between ```0011``` and ```0014```, the call to another ```test``` function in a different scope, is correctly identified as not being recursive.
+2. At `0006` we can see that `$x` is reset to its default value of `10`.
+3. Between `0011` and `0014`, the call to another `test` function in a different scope, is correctly identified as not being recursive.
 
 <a name="install"></a>
-### Installation
+## Installation
 
-As it stands, you'll need to compile the module yourself. There are ways to compile it in isolation, but it's probably much easier to use the PHP build tools.
+You'll need to compile this module yourself. There are ways to do the compilation in isolation, but it's probably much easier to use the PHP build tools.
 
-First,
+Either way, you'll need to download the files from `src/` somewhere. You can either put them directly in your PHP source directory (e.g. in `php-src/ext/tailcall`) - or use something like the `--add-modules-dir` option during configuration, to point to a specific location.
 
+Once you have compiled either a `.so` or `.dll`, you can add the module to your PHP installation by adding the following to your `php.ini`:
 
+```
+zend_extension=<path to your .dll or .so>
+```
+
+(I'd recommend adding it before OPcache.)
+
+There's any number of guides around the internet on how to build PHP and/or extensions from source, but something like this should get you started:
+
+#### Linux
+
+```
+cd <where ever tailcall.c and config.m4 is>
+phpize
+./configure
+make
+```
+
+If you have any problems, it's possible you don't have the source downloaded and/or the compiler doesn't know where to look for includes (php.h and such).
+
+#### Windows
+
+Things can get messy on Windows. Your best bet is to install & configure everything necessary to build PHP itself from source using [this guide](https://wiki.php.net/internals/windows/stepbystepbuild_sdk_2).
+
+With the source and SDK installed, you should be able to do something like:
+
+```
+cd <where ever your PHP source is>
+nmake php_tailcall.dll
+```
+
+If you run into trouble, you likely don't have environment variables set (e.g. by `vcvarsall.bat` or `phpsdk_setvars.bat`) - or you haven't configured things right (e.g. with `buildconf.bat`) - or PHP doesn't know where to find the module source.
 
 <a name="config"></a>
-### Configuration
+## Configuration
 
 [todo]
 
 <a name="internals"></a>
-### Under the hood
+## Under the hood
+
+[todo]
+
+<a name="caveats"></a>
+## Caveats
+
+* Dynamic function calls (e.g. functions called from variables) will not currently be optimised.
+* Mutual recursion is not currently supported (though I see no reason why it wouldn't be possible in the future).
+* I haven't yet gotten around to adding support for the `ZEND_INIT_NS_FCALL_BY_NAME` opcode.
+* Calls using `static::` and `self::` are supported, but the two are not currently differentiated - so it's possible that funky things could happen (e.g. non-recursive calls being identified as recursive, etc.).
 
 <a name="license"></a>
-### License
+## License
 
 MIT, I suppose.
